force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Ignition_sources_safe_if_gas_release_pos__c.field-meta.xml
<CustomField>
    <fullName>Ignition_sources_safe_if_gas_release_pos__c</fullName>
    <description>Text of the flag for ignition safe(This field was created for NPL MA).</description>
    <label>Ignition sources safe if gas release pos</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>