force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Is_the_work_area_near_traffic__c.field-meta.xml
<CustomField>
    <fullName>Is_the_work_area_near_traffic__c</fullName>
    <description>Text of the flag for work near traffic(This field was created for NPL MA).</description>
    <label>Is the work area near traffic</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>