force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Is_there_a_Locate_Ticket_for_the_job__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_Locate_Ticket_for_the_job__c</fullName>
    <description>Text of the flag for locate ticket(This field was created for NPL MA).</description>
    <label>Is there a Locate Ticket for the job?</label>
    <length>10</length>
    <type>Text</type>
</CustomField>