force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Jobsite_has_environmentally_sensitive_fe__c.field-meta.xml
<CustomField>
    <fullName>Jobsite_has_environmentally_sensitive_fe__c</fullName>
    <description>Text of the flag for envt sensitive features(This field was created for NPL MA).</description>
    <label>Jobsite has environmentally sensitive fe</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>