force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Locate__c.field-meta.xml
<CustomField>
    <fullName>Locate__c</fullName>
    <description>Locate(This field was created for NPL MA).</description>
    <label>Locate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>