force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Locate_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Locate_Start_Date__c</fullName>
    <description>Date text for Locate Start(This field was created for NPL MA).</description>
    <label>Locate Start Date</label>
    <type>Date</type>
</CustomField>