force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Minimum_Clearance_Distance_to_be_observe__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Clearance_Distance_to_be_observe__c</fullName>
    <description>Min clearance to be observed(This field was created for NPL MA).</description>
    <label>Minimum Clearance Distance to be observe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>