force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Nearest_Emergency_Medical_Facility__c.field-meta.xml
<CustomField>
    <fullName>Nearest_Emergency_Medical_Facility__c</fullName>
    <description>Description of nearest emergency medical facility(This field was created for NPL MA).</description>
    <label>Nearest Emergency Medical Facility</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>