force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/OneDrive__c.field-meta.xml
<CustomField>
    <fullName>OneDrive__c</fullName>
    <description>##Conga created button:00bO5000000wBPh</description>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;queryid=[NPLJHAForSDOCS]0Q_007EAU099652,[FileImages]0Q_013EAU699867,[CriticalWorksPerfrmd]0Q_010EAU042505,[VisitorInformation]0Q_012EAU251036&quot; + 
&quot;&amp;templateid=0T_078EAU099987&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;ofn=&quot; + PDF_Name__c +
&quot;&amp;onedrivevisible=1&quot; + 
&quot;&amp;ofp=FDM/Mid-America/JHA&quot; + 
&quot;&amp;qmode=OneDrive&quot; + 
&quot;&amp;sc1=SalesforceFile&quot; + 
&quot;&amp;sc0=1&quot;</formula>
    <label>OneDrive</label>
    <type>Text</type>
</CustomField>