force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Only_Lessons_Learnt_Is_Blank_Not_Toolbox__c.field-meta.xml
<CustomField>
    <fullName>Only_Lessons_Learnt_Is_Blank_Not_Toolbox__c</fullName>
    <description>24401</description>
    <formula>IF (  AND( NOT ( ISBLANK( Toolbox_Talk_special_interest_topics_dis__c ) ), ISBLANK( What_was_learned_from_yesterday_s_Think__c ) ) , &quot;Yes&quot;, &quot;No&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Only Lessons Learnt Is Blank Not Toolbox</label>
    <type>Text</type>
</CustomField>