force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Only_Toolbox_Is_Blank_Not_Lessons_Learnt__c.field-meta.xml
<CustomField>
    <fullName>Only_Toolbox_Is_Blank_Not_Lessons_Learnt__c</fullName>
    <description>24401</description>
    <formula>IF ( AND( ISBLANK( Toolbox_Talk_special_interest_topics_dis__c ) , NOT ( ISBLANK( What_was_learned_from_yesterday_s_Think__c ) ) ) , &quot;Yes&quot;, &quot;No&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Only Toolbox Is Blank Not Lessons Learnt</label>
    <type>Text</type>
</CustomField>