force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Other_comments_on_job_close_out__c.field-meta.xml
<CustomField>
    <fullName>Other_comments_on_job_close_out__c</fullName>
    <description>Description of comments on job close out(This field was created for NPL MA).</description>
    <label>Other comments on job close out</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>