force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Other_Emergency_Planning_Discussion__c.field-meta.xml
<CustomField>
    <fullName>Other_Emergency_Planning_Discussion__c</fullName>
    <description>Description of other emergency planning(This field was created for NPL MA).</description>
    <label>Other Emergency Planning /Discussion</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>