force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/other_environment_controls__c.field-meta.xml
<CustomField>
    <fullName>other_environment_controls__c</fullName>
    <description>Description of other envt control(This field was created for NPL MA).</description>
    <label>other environment controls</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>