force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Other_minimum_distance__c.field-meta.xml
<CustomField>
    <fullName>Other_minimum_distance__c</fullName>
    <description>Other minimum distance(This field was created for NPL MA).</description>
    <label>Other minimum distance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>