force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/other_protective__c.field-meta.xml
<CustomField>
    <fullName>other_protective__c</fullName>
    <description>Description of other protective systems(This field was created for NPL MA).</description>
    <label>other protective</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>