force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Other_specialized_PPE__c.field-meta.xml
<CustomField>
    <fullName>Other_specialized_PPE__c</fullName>
    <description>Other specialized PPE(This field was created for NPL MA).</description>
    <label>Other specialized PPE</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>