force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/other_unplanned_event__c.field-meta.xml
<CustomField>
    <fullName>other_unplanned_event__c</fullName>
    <description>Description of other unplanned events(This field was created for NPL MA).</description>
    <label>other unplanned event</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>