force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Overhead_utilities_present_in_work_area__c.field-meta.xml
<CustomField>
    <fullName>Overhead_utilities_present_in_work_area__c</fullName>
    <description>Text of the flag for overhead utilities(This field was created for NPL MA).</description>
    <label>Overhead utilities present in work area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>