force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/PDF_Name__c.field-meta.xml
<CustomField>
    <fullName>PDF_Name__c</fullName>
    <description>Composed by Area + &quot;JHA&quot; + Foreman&apos;s first and last names + mmddyyyy + end time(This field was created for NPL MA).</description>
    <formula>Form__r.Area_Code__c +
&quot; &quot; +
&apos;JHA&apos; +
&quot; - &quot; +
CreatedBy.FirstName +
&quot; &quot; +
CreatedBy.LastName +
&quot; &quot; +
TEXT(Start_Date__c) +
&quot; &quot; +
IF ( CONTAINS ( MID ( End_Time__c, FIND ( &quot;:&quot;, End_Time__c ) + 1, 2 ), &quot;:&quot; ),
				&quot;0&quot; + MID ( End_Time__c, FIND ( &quot;:&quot;, End_Time__c ) + 1, 1 ),
  MID ( End_Time__c, FIND ( &quot;:&quot;, End_Time__c ) + 1, 2 ) )</formula>
    <label>PDF Name</label>
    <type>Text</type>
</CustomField>