force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Perform_Stretch_Flex_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Perform_Stretch_Flex_Checkbox__c</fullName>
    <description>Flag for perform stretch(This field was created for NPL MA).</description>
    <formula>IF(  ISPICKVAL(Perform_Stretch_Flex_with_the_crew__c,&apos;Yes&apos;), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Perform Stretch &amp; Flex Checkbox</label>
    <type>Checkbox</type>
</CustomField>