force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Perform_Stretch_Flex_with_the_crew__c.field-meta.xml
<CustomField>
    <fullName>Perform_Stretch_Flex_with_the_crew__c</fullName>
    <description>Text of the flag for perform stretch(This field was created for NPL MA).</description>
    <label>Perform Stretch &amp; Flex with the crew</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>