force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Person_in_Charge_Foreman__c.field-meta.xml
<CustomField>
    <fullName>Person_in_Charge_Foreman__c</fullName>
    <description>Foreman name(This field was created for NPL MA).</description>
    <label>Person in Charge (Foreman)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>