force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Personal_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Personal_Area_Code__c</fullName>
    <description>24401</description>
    <formula>Personnel_Area__r.Areacode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Personal Area Code</label>
    <type>Text</type>
</CustomField>