force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Personnel_Area__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>24401</description>
    <label>Personnel Area</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipName>NPL_JHA_for_SDOCS</relationshipName>
    <type>Lookup</type>
</CustomField>