force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Personnel_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Area_Code__c</fullName>
    <description>24401</description>
    <formula>Personnel_Area__r.Areacode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Personnel Area Code</label>
    <type>Text</type>
</CustomField>