force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Positive_response_by_Locate__c.field-meta.xml
<CustomField>
    <fullName>Positive_response_by_Locate__c</fullName>
    <description>Text of the flag for positive response by locate(This field was created for NPL MA).</description>
    <label>Positive response by Locate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>