force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Prevention_Plan__c.field-meta.xml
<CustomField>
    <fullName>Prevention_Plan__c</fullName>
    <description>Description of prevention plan(This field was created for NPL MA).</description>
    <label>Prevention Plan</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>