force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Protective_systems_excavations_long__c.field-meta.xml
<CustomField>
    <fullName>Protective_systems_excavations_long__c</fullName>
    <description>Protective systems plus extra spaces for print format(This field was created for NPL MA).</description>
    <formula>IF( INCLUDES(Protective_systems_in_place_for_excavati__c, &apos;Ladders&apos;), &apos;Ladders&apos; &amp; BR(), null) +
IF( INCLUDES(Protective_systems_in_place_for_excavati__c, &apos;Ramps&apos;), &apos;Ramps&apos; &amp; BR(), null) +
IF( INCLUDES(Protective_systems_in_place_for_excavati__c, &apos;Shielding/shoring&apos;), &apos;Shielding/shoring&apos; &amp; BR(), null) +
IF( INCLUDES(Protective_systems_in_place_for_excavati__c, &apos;Trench box&apos;), &apos;Trench box&apos; &amp; BR(), null) +
IF( INCLUDES(Protective_systems_in_place_for_excavati__c, &apos;Covers/plates&apos;), &apos;Covers/plates&apos; &amp; BR(), null) +
IF( INCLUDES(Protective_systems_in_place_for_excavati__c, &apos;Barricades/fencing&apos;), &apos;Barricades/fencing&apos; &amp; BR(), null) +
IF( INCLUDES(Protective_systems_in_place_for_excavati__c, &apos;Other&apos;), &apos;Other&apos;, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Protective systems excavations long</label>
    <type>Text</type>
</CustomField>