force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Protective_systems_in_place_for_excavati__c.field-meta.xml
<CustomField>
    <fullName>Protective_systems_in_place_for_excavati__c</fullName>
    <description>Description of protective systems(This field was created for NPL MA).</description>
    <label>Protective systems in place for excavati</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ladders</fullName>
            </value>
            <value>
                <fullName>Ramps</fullName>
            </value>
            <value>
                <fullName>Shielding/shoring</fullName>
            </value>
            <value>
                <fullName>Trench box</fullName>
            </value>
            <value>
                <fullName>Covers/plates</fullName>
            </value>
            <value>
                <fullName>Barricades/fencing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>