force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Purge_Date__c.field-meta.xml
<CustomField>
    <fullName>Purge_Date__c</fullName>
    <description>Set as the record&apos;s creation date plus seven days(This field was created for NPL MA).</description>
    <formula>CreatedDate + 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purge Date</label>
    <type>Date</type>
</CustomField>