force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Read_Stop_Work_Responsibility_Statement__c.field-meta.xml
<CustomField>
    <fullName>Read_Stop_Work_Responsibility_Statement__c</fullName>
    <description>Text of the flag for read stop work statement(This field was created for NPL MA).</description>
    <label>Read Stop Work Responsibility Statement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>