force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Reinforce_standard_PPE_usage__c.field-meta.xml
<CustomField>
    <fullName>Reinforce_standard_PPE_usage__c</fullName>
    <description>Flag for ready for PDF set by flow(This field was created for NPL MA).</description>
    <label>Reinforce standard PPE usage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>