force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Reinforce_standard_PPE_usage_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Reinforce_standard_PPE_usage_checkbox__c</fullName>
    <description>Text of the flag for reinforce standard PPE(This field was created for NPL MA).</description>
    <formula>IF( ISPICKVAL(Reinforce_standard_PPE_usage__c,&apos;Yes&apos;), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reinforce standard PPE usage checkbox</label>
    <type>Checkbox</type>
</CustomField>