force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Review_address_Human_Performance_Check__c.field-meta.xml
<CustomField>
    <fullName>Review_address_Human_Performance_Check__c</fullName>
    <description>Flag for reinforce standard PPE(This field was created for NPL MA).</description>
    <formula>IF(  Review_address_Human_Performance_Traps__c  = &apos;Yes&apos;, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Review &amp; address Human Performance Check</label>
    <type>Checkbox</type>
</CustomField>