force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Review_address_Human_Performance_Traps__c.field-meta.xml
<CustomField>
    <fullName>Review_address_Human_Performance_Traps__c</fullName>
    <description>Text of the flag for human performance traps review(This field was created for NPL MA).</description>
    <label>Review &amp; address Human Performance Traps</label>
    <length>10</length>
    <type>Text</type>
</CustomField>