force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Review_spotter_requirements_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Review_spotter_requirements_checkbox__c</fullName>
    <description>Flag for review spotter reqs(This field was created for NPL MA).</description>
    <formula>IF( ISPICKVAL(Review_spotter_requirements_duties_a__c,&apos;Yes&apos;), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Review spotter requirements checkbox</label>
    <type>Checkbox</type>
</CustomField>