force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Review_spotter_requirements_duties_a__c.field-meta.xml
<CustomField>
    <fullName>Review_spotter_requirements_duties_a__c</fullName>
    <description>Text of the flag for review spotter reqs(This field was created for NPL MA).</description>
    <label>Review spotter requirements, duties, &amp; a</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>