force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Review_traffic_hazards_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Review_traffic_hazards_checkbox__c</fullName>
    <description>Flag for review traffic hazards(This field was created for NPL MA).</description>
    <formula>IF(  Review_traffic_hazards_controls_with_c__c  = &apos;Yes&apos;, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Review traffic hazards checkbox</label>
    <type>Checkbox</type>
</CustomField>