force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Review_traffic_hazards_controls_with_c__c.field-meta.xml
<CustomField>
    <fullName>Review_traffic_hazards_controls_with_c__c</fullName>
    <description>Text of the flag for review traffic hazards(This field was created for NPL MA).</description>
    <label>Review traffic hazards controls with c</label>
    <length>10</length>
    <type>Text</type>
</CustomField>