force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/SAFE_Lead_Observer__c.field-meta.xml
<CustomField>
    <fullName>SAFE_Lead_Observer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SAFE Lead Observer</label>
    <referenceTo>Default_Crew__c</referenceTo>
    <relationshipName>NPL_JHA_for_SDOCS</relationshipName>
    <type>Lookup</type>
</CustomField>