force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/SAFE_Lead_Observer_Assigned_Crew__c.field-meta.xml
<CustomField>
    <fullName>SAFE_Lead_Observer_Assigned_Crew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>28671 Field to lookup related Assigned Crew default/active records on the related work order for the foreman to select in the JHA</description>
    <label>SAFE Lead Observer Assigned Crew</label>
    <referenceTo>Assigned_Crew__c</referenceTo>
    <relationshipLabel>JHAs SAFE Lead Observer</relationshipLabel>
    <relationshipName>JHAs</relationshipName>
    <type>Lookup</type>
</CustomField>