force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Select_tasks_requiring_specialized_PPE__c.field-meta.xml
<CustomField>
    <fullName>Select_tasks_requiring_specialized_PPE__c</fullName>
    <description>Description of tasks requiring specialized PPE(This field was created for NPL MA).</description>
    <label>Select tasks requiring specialized PPE</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FR Clothing</fullName>
            </value>
            <value>
                <fullName>Fall Protection</fullName>
            </value>
            <value>
                <fullName>Respiratory Protection</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>