force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/SignAnswerForeman__c.field-meta.xml
<CustomField>
    <fullName>SignAnswerForeman__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Key to the answer object with the entry corresponding to the signature(This field was created for NPL MA).</description>
    <label>SignAnswerForeman</label>
    <referenceTo>disco__Answer__c</referenceTo>
    <relationshipName>NPL_JHA_for_SDOCS8nqs</relationshipName>
    <type>Lookup</type>
</CustomField>