force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Text of start date(This field was created for NPL MA).</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>