force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <description>Text of start time(This field was created for NPL MA).</description>
    <label>StartTime</label>
    <length>80</length>
    <type>Text</type>
</CustomField>