force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Tasks_specialized_PPE__c.field-meta.xml
<CustomField>
    <fullName>Tasks_specialized_PPE__c</fullName>
    <description>Select tasks requiring specialized PPE plus extra spaces for print format(This field was created for NPL MA).</description>
    <formula>IF( INCLUDES(Select_tasks_requiring_specialized_PPE__c, &apos;FR Clothing&apos;), &apos;FR Clothing&apos; &amp; BR(), null) +
IF( INCLUDES(Select_tasks_requiring_specialized_PPE__c, &apos;Fall Protection&apos;), &apos;Fall Protection&apos; &amp; BR(), null) +
IF( INCLUDES(Select_tasks_requiring_specialized_PPE__c, &apos;Respiratory Protection&apos;), &apos;Respiratory Protection&apos; &amp; BR(), null) +
IF( INCLUDES(Select_tasks_requiring_specialized_PPE__c, &apos;Other&apos;), &apos;Other&apos;, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tasks specialized PPE</label>
    <type>Text</type>
</CustomField>