force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <description>Text of temperature(This field was created for NPL MA).</description>
    <label>Temperature</label>
    <length>10</length>
    <type>Text</type>
</CustomField>