force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Temperature_High__c.field-meta.xml
<CustomField>
    <fullName>Temperature_High__c</fullName>
    <description>BA: NPLMA - Used to group JHA Temperatures for reporting</description>
    <formula>VALUE(IF(LEN(LEFT(REVERSE(Temperature__c),FIND(REVERSE(Temperature__c), &apos;/&apos;)))=3, RIGHT(Temperature__c, 3), RIGHT(Temperature__c,2)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Temperature High</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>