force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Temperature_Low__c.field-meta.xml
<CustomField>
    <fullName>Temperature_Low__c</fullName>
    <description>BA: NPLMA - Used to group JHA Temperatures for reporting</description>
    <formula>VALUE(LEFT(Temperature__c,FIND(Temperature__c, &apos;/&apos;)+2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Temperature Low</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>