force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Temperature_Number__c.field-meta.xml
<CustomField>
    <fullName>Temperature_Number__c</fullName>
    <description>Value of temperature(This field was created for NPL MA).</description>
    <formula>Value(Temperature__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Temperature Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>