force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Test_Create_JHA_PDF__c.field-meta.xml
<CustomField>
    <fullName>Test_Create_JHA_PDF__c</fullName>
    <description>Troubleshoot Conga Trigger</description>
    <formula>HYPERLINK(&quot;/apex/APXTConga4__Conga_Composer?ServerURL=&quot;+ $Api.Partner_Server_URL_520 + 
Create_JHA_PDF__c ,&quot;Test Conga Trigger via User Interface&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Create JHA PDF</label>
    <type>Text</type>
</CustomField>