force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Test_OneDrive_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Test_OneDrive_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test OneDrive Trigger</label>
    <type>Checkbox</type>
</CustomField>