force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Today_s_Think_SAFE_Lead_Observer_is__c.field-meta.xml
<CustomField>
    <fullName>Today_s_Think_SAFE_Lead_Observer_is__c</fullName>
    <description>Name of the observer(This field was created for NPL MA).</description>
    <inlineHelpText>Used in Conga Printout it is the name from the selected Assigned Crew Member updated by flow</inlineHelpText>
    <label>Today&apos;s Think SAFE Lead Observer is</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>