force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Toolbox_Talk_Lessons_Learnt_Not_Blank__c.field-meta.xml
<CustomField>
    <fullName>Toolbox_Talk_Lessons_Learnt_Not_Blank__c</fullName>
    <description>24401</description>
    <formula>IF ( AND( NOT ( ISBLANK( Toolbox_Talk_special_interest_topics_dis__c ) ), NOT ( ISBLANK( What_was_learned_from_yesterday_s_Think__c ) ) ) , &quot;Yes&quot;, &quot;No&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Toolbox Talk Lessons Learnt Not Blank</label>
    <type>Text</type>
</CustomField>