force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Toolbox_Talk_special_interest_topics_dis__c.field-meta.xml
<CustomField>
    <fullName>Toolbox_Talk_special_interest_topics_dis__c</fullName>
    <description>Description of the toolbox talk(This field was created for NPL MA).</description>
    <label>Toolbox Talk/special interest topics dis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>