force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Traffic_Control_Plan_Includes__c.field-meta.xml
<CustomField>
    <fullName>Traffic_Control_Plan_Includes__c</fullName>
    <description>Description of the traffic control plan(This field was created for NPL MA).</description>
    <label>Traffic Control Plan Includes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vehicle/equipment parked to protect work area</fullName>
            </value>
            <value>
                <fullName>Lane Closure</fullName>
            </value>
            <value>
                <fullName>Traffic Control Signs</fullName>
            </value>
            <value>
                <fullName>Cones/movable barricades</fullName>
            </value>
            <value>
                <fullName>Immovable barriers/barricades</fullName>
            </value>
            <value>
                <fullName>Flaggers/Police detail</fullName>
            </value>
            <value>
                <fullName>Public sidewalk closure/pedestrian detour</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>